--- a/Level-trans.html
+++ b/Level-trans.html
@@ -43,6 +43,7 @@
                             <div id = "result2"></div>
                             <div id = "result3"></div>
                             <div id = "result4"></div>
+                            <div id = "result5"></div>
                           </div>
                          </form>
                             
