--- a/Temp-trans.html
+++ b/Temp-trans.html
@@ -15,11 +15,11 @@
               <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
             </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="post.html" class="nav-link px-2 text-white">Post Method</a></li>
-                <li><a href="Flow-tran.html" class="nav-link px-2 text-white">Flow-transducer</a></li> 
-                <li><a href="Level-trans.html" class="nav-link px-2 text-white">Level-transducer</a></li>  
-                <li><a href="Temp-trans.html" class="nav-link px-2 text-white">Temperature-transducer</a></li> 
-                <li><a href="pressure-Trans.html" class="nav-link px-2 text-white">Pressure-transducer</a></li> 
+                <li><a href="post.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Post Method</a></li>
+                <li><a href="Flow-tran.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Flow-transducer</a></li> 
+                <li><a href="Level-trans.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Level-transducer</a></li>  
+                <li><a href="Temp-trans.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Temperature-transducer</a></li> 
+                <li><a href="pressure-Trans.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Pressure-transducer</a></li> 
             </ul>
           </div>
         </div>
@@ -34,19 +34,18 @@
                       <div>
                          <form class="text-center">
                           <h3>6301072510061-Natchanon Sangthong</h3><br>
-                            <h3>Temperature-transducer</h3>
-                            Sensor_id :<input id = "Sensor" type ="text" placholder = "Sensorinfo">
-                                      <input  type = "submit" >
-                            <div id = "result"></div>
-                            <div id = "result0"></div>
-                            <div id = "result1"></div>
-                            <div id = "result2"></div>
-                            <div id = "result3"></div>
-                            <div id = "result4"></div>
-                            <div id = "result5"></div>
+                            <h3>Temperature-Transducer</h3><br>
+                            <input class="form-control me-2" id = "Sensor" type ="text" placeholder="Sensor_id"><br>
+                            <input  type = "submit" class="btn btn-outline-secondary btn-lg px-4 text-black" ><br>
                           </div>
                          </form>
-                            
+                         <div id = "result"></div>
+                         <div id = "result0"></div>
+                         <div id = "result1"></div>
+                         <div id = "result2"></div>
+                         <div id = "result3"></div>
+                         <div id = "result4"></div>
+                         <div id = "result5"></div>
                         </div>
                     </div>
                     </div>
