--- a/post.html
+++ b/post.html
@@ -17,11 +17,11 @@
               <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
             </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="post.html" class="nav-link px-2 text-white">Post Method</a></li>
-                <li><a href="Flow-tran.html" class="nav-link px-2 text-white">Flow-transducer</a></li> 
-                <li><a href="Level-trans.html" class="nav-link px-2 text-white">Level-transducer</a></li>  
-                <li><a href="Temp-trans.html" class="nav-link px-2 text-white">Temperature-transducer</a></li> 
-                <li><a href="pressure-Trans.html" class="nav-link px-2 text-white">Pressure-transducer</a></li>
+                <li><a href="post.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Post Method</a></li>
+                <li><a href="Flow-tran.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Flow-transducer</a></li> 
+                <li><a href="Level-trans.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Level-transducer</a></li>  
+                <li><a href="Temp-trans.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Temperature-transducer</a></li> 
+                <li><a href="pressure-Trans.html" class="btn btn-outline-secondary btn-lg px-4 text-white">Pressure-transducer</a></li>
             </ul>
           </div>
         </div>
